# CMakePractice

Student/: CMakeLists.txt
Student/include/: Student.h
Student/src/: Student.cpp
StudentLib/: CMakeLists.txt
StudentLibInclude/: CMakeLists.txt
